--- a/source/package.json
+++ b/source/package.json
@@ -1,8 +1,9 @@
 {
   "name": "tt-ghost",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
+    "start": "npm run dev",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
