--- a/source/package.json
+++ b/source/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fullscreen.js": "^0.2.5",
+    "lipper": "^0.4.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
   },
