--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate && cp -raf ./.outout/public/* ./.",
+    "generate": "nuxt generate && cp -af ./.output/public/* ./.",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
